--- a/app/src/main/res/layout/grocery_alertdialog_add.xml
+++ b/app/src/main/res/layout/grocery_alertdialog_add.xml
@@ -6,6 +6,7 @@
     android:padding="16dp">
 
     <EditText
+        android:layout_margin="4dp"
         android:id="@+id/grocery_alert_add_grocery_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
