--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -69,6 +69,7 @@
 
                         </FrameLayout>
                         <LinearLayout
+                            android:id="@+id/frag_recipe_details_user_linearLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="4dp"
@@ -77,7 +78,9 @@
 
                             <de.hdodenhof.circleimageview.CircleImageView
                                 app:civ_border_width="2dp"
+                                app:civ_border_color="@color/colorPrimary"
                                 android:id="@+id/recipe_details_user_photo"
+                                android:layout_margin="6dp"
                                 android:layout_width="30dp"
                                 android:layout_height="30dp"
                                 android:src="@drawable/ic_person"/>
@@ -90,23 +93,6 @@
                                 android:layout_marginLeft="10dp"
                                 android:gravity="center_vertical"
                                 android:id="@+id/recipe_details_user_username"/>
-
-                            <RelativeLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
-
-                                <ToggleButton
-                                    android:checked="false"
-                                    android:id="@+id/recipe_details_user_follow_button"
-                                    android:foreground="?attr/selectableItemBackground"
-                                    android:backgroundTint="@color/colorPrimary"
-                                    android:textOff="follow"
-                                    android:textOn="Following"
-                                    android:textColor="@android:color/white"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_alignParentEnd="true"/>
-                            </RelativeLayout>
 
                         </LinearLayout>
 
