Updated Edit Recipe Fragment to fix Number Picker 1 & 2 conditional statements. Instead of edittext it's now a button.

--- a/app/src/main/res/layout/fragment_recipe_add_edit.xml
+++ b/app/src/main/res/layout/fragment_recipe_add_edit.xml
@@ -70,21 +70,22 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:weightSum="3">
+                        android:weightSum="1.0">
 
                         <androidx.appcompat.widget.AppCompatImageView
                             android:id="@+id/recipe_prepTime_Image"
                             android:layout_width="80dp"
+                            android:layout_gravity="center"
                             android:layout_height="40dp"
                             android:layout_marginStart="16dp"
-                            android:layout_marginTop="15dp"
                             android:src="@drawable/ic_prep_time"
-                            android:layout_weight="1"/>
-                        <EditText
-                            android:hint="Add Prep Time..."
-                            android:layout_weight="2"
+                            android:layout_weight=".1"/>
+                        <Button
+                            android:text="Add Prep Time..."
+                            android:layout_weight=".9"
+                            android:layout_gravity="center"
                             android:id="@+id/recipe_add_prepTime_et"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="15sp"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large"
