--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.SearchFragment"
+    tools:context=".Fragments.HomeFragment"
     android:background="@color/colorAccent">
 
     <androidx.recyclerview.widget.RecyclerView
