--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_search"
+        android:id="@+id/nav_home"
         android:icon="@drawable/baseline_search_white_24dp"
         android:title="@android:string/search_go" />
     <item
