--- a/app/src/main/res/layout/list_recipes_recipe_item.xml
+++ b/app/src/main/res/layout/list_recipes_recipe_item.xml
@@ -84,8 +84,9 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/recipe_item_photo" />
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/recipe_item_fab_like"
+            <ImageButton
+                android:backgroundTint="@android:color/transparent"
+                android:id="@+id/recipe_item_image_like"
                 android:layout_width="55dp"
                 android:layout_height="55dp"
                 android:layout_marginStart="72dp"
